==> AddictiveInstruments/ADIOS/mios32/STM32G0xx/mios32_iic.c <==
#include <mios32.h>
#define MIOS32_IIC0_SCL_PORT    GPIOB
#define MIOS32_IIC0_SCL_PIN     LL_GPIO_PIN_10
#define MIOS32_IIC0_SCL_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_10, GPIO_AF_I2C2); }
#define MIOS32_IIC0_SDA_PORT    GPIOB
#define MIOS32_IIC0_SDA_PIN     LL_GPIO_PIN_11
#define MIOS32_IIC0_SDA_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_11, GPIO_AF_I2C2); }
#define MIOS32_IIC1_SCL_PORT    GPIOB
#define MIOS32_IIC1_SCL_PIN     LL_GPIO_PIN_6
#define MIOS32_IIC1_SCL_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_6, GPIO_AF_I2C1); }
#define MIOS32_IIC1_SDA_PORT    GPIOB
#define MIOS32_IIC1_SDA_PIN     LL_GPIO_PIN_9
#define MIOS32_IIC1_SDA_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_9, GPIO_AF_I2C1); }
#define MIOS32_IIC1_SDA_PORT    GPIOB
#define MIOS32_IIC1_SDA_PIN     LL_GPIO_PIN_7
#define MIOS32_IIC1_SDA_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_7, GPIO_AF_I2C1); }
#define MIOS32_IIC0_DUTYCYCLE I2C_DutyCycle_2
#define MIOS32_IIC1_DUTYCYCLE I2C_DutyCycle_2

s32 MIOS32_IIC_Init(u32 mode)
{
  int i;

  // currently only mode 0 supported
  if( mode != 0 )
    return -1; // unsupported mode

  // configure IIC pins in open drain mode
  LL_GPIO_InitTypeDef GPIO_InitStructure;
  LL_GPIO_StructInit(&GPIO_InitStructure);
  GPIO_InitStructure.Speed = LL_GPIO_SPEED_FREQ_MEDIUM;
  GPIO_InitStructure.Mode = GPIO_Mode_AF;
  GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_OPENDRAIN;

  GPIO_InitStructure.Pin = MIOS32_IIC0_SCL_PIN;
  LL_GPIO_Init(MIOS32_IIC0_SCL_PORT, &GPIO_InitStructure);
  MIOS32_IIC0_SCL_AF;

  GPIO_InitStructure.Pin = MIOS32_IIC0_SDA_PIN;
  LL_GPIO_Init(MIOS32_IIC0_SDA_PORT, &GPIO_InitStructure);
  MIOS32_IIC0_SDA_AF;

#if MIOS32_IIC_NUM >= 2
  GPIO_InitStructure.Pin = MIOS32_IIC1_SCL_PIN;
  LL_GPIO_Init(MIOS32_IIC1_SCL_PORT, &GPIO_InitStructure);
  MIOS32_IIC1_SCL_AF;

  GPIO_InitStructure.Pin = MIOS32_IIC1_SDA_PIN;
  LL_GPIO_Init(MIOS32_IIC1_SDA_PORT, &GPIO_InitStructure);
  MIOS32_IIC1_SDA_AF;
#endif

  for(i=0; i<MIOS32_IIC_NUM; ++i) {
    // configure I2C peripheral
    MIOS32_IIC_InitPeripheral(i);

    // now accessible for other tasks
    iic_rec[i].iic_semaphore = 0;
    iic_rec[i].last_transfer_error = 0;
  }

  // configure and enable I2C2 interrupts
  MIOS32_IRQ_Install(I2C2_EV_IRQn, MIOS32_IRQ_IIC_EV_PRIORITY);  
#if MIOS32_IIC_NUM >= 2
  MIOS32_IRQ_Install(I2C1_EV_IRQn, MIOS32_IRQ_IIC_EV_PRIORITY);
#endif

  MIOS32_IRQ_Install(I2C2_ER_IRQn, MIOS32_IRQ_IIC_ER_PRIORITY);
#if MIOS32_IIC_NUM >= 2
  MIOS32_IRQ_Install(I2C1_ER_IRQn, MIOS32_IRQ_IIC_ER_PRIORITY);
#endif

  return 0; // no error
}

static void MIOS32_IIC_InitPeripheral(u8 iic_port)
{
  I2C_InitTypeDef  I2C_InitStructure;
  iic_rec_t *iicx = &iic_rec[iic_port];// simplify addressing of record

  // prepare I2C init-struct
  I2C_StructInit(&I2C_InitStructure);
  I2C_InitStructure.I2C_Mode = I2C_Mode_I2C;
  I2C_InitStructure.I2C_OwnAddress1 = 0;
  I2C_InitStructure.I2C_Ack = I2C_Ack_Enable;
  I2C_InitStructure.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit;

  switch( iic_port ) {
    case 0:
      // define base address
      iicx->base = I2C2;

      // enable peripheral clock of I2C
      RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C2, ENABLE);

      // set I2C clock bus clock params
      // note that the STM32 driver handles value <= 100kHz differently! (duty cycle always 1:1)
      // important: bus frequencies > 400kHz don't work stable
      I2C_InitStructure.I2C_DutyCycle = MIOS32_IIC0_DUTYCYCLE;
      I2C_InitStructure.I2C_ClockSpeed = MIOS32_IIC0_BUS_FREQUENCY;

      break;

#if MIOS32_IIC_NUM >= 2
    case 1:
      // define base address
      iicx->base = I2C1;

      // enable peripheral clock of I2C
      RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C1, ENABLE);
      
      // set I2C clock bus clock params
      // note that the STM32 driver handles value <= 100kHz differently! (duty cycle always 1:1)
      // important: bus frequencies > 400kHz don't work stable
      I2C_InitStructure.I2C_DutyCycle = MIOS32_IIC1_DUTYCYCLE;
      I2C_InitStructure.I2C_ClockSpeed = MIOS32_IIC1_BUS_FREQUENCY; 

      break;
#endif

    default:
      return;
  }

  // trigger software reset via I2C_DeInit
  I2C_DeInit(iicx->base);

  // clear transfer state and error value
  iicx->transfer_state.ALL = 0;
  iicx->transfer_error = 0;


  // configure I2C peripheral
  I2C_Init(iicx->base, &I2C_InitStructure);
}

s32 MIOS32_IIC_Transfer(u8 iic_port, mios32_iic_transfer_t transfer, u8 address, u8 *buffer, u16 len)
{
  iic_rec_t *iicx = &iic_rec[iic_port];// simplify addressing of record
  s32 error;

  if( iic_port >= MIOS32_IIC_NUM )
    return MIOS32_IIC_ERROR_INVALID_PORT;

  // wait until previous transfer finished
  if( (error = MIOS32_IIC_TransferWait(iic_port)) ) { // transmission error during previous transfer
    iicx->iic_semaphore = 0; // release semaphore for easier programming at user level
    return error + MIOS32_IIC_ERROR_PREV_OFFSET;
  }

  // disable interrupts
  I2C_ITConfig(iicx->base, I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR, DISABLE);

  // clear transfer state and error value
  iicx->transfer_state.ALL = 0;
  iicx->transfer_error = 0;

  // set buffer length and start index
  iicx->buffer_len = len;
  iicx->buffer_ix = 0;

  // branch depending on read/write
  if( transfer == IIC_Read || transfer == IIC_Read_AbortIfFirstByteIs0 ) {
    // take new address/buffer/len
    iicx->iic_address = address | 1; // set bit 0 for read operation
    iicx->tx_buffer_ptr = NULL; // ensure that previous TX buffer won't be accessed
    iicx->rx_buffer_ptr = buffer;
    // special option for optimized MBHP_IIC_MIDI
    iicx->transfer_state.ABORT_IF_FIRST_BYTE_0 = transfer == IIC_Read_AbortIfFirstByteIs0 ? 1 : 0;
  } else if( transfer == IIC_Write || transfer == IIC_Write_WithoutStop ) {
    // take new address/buffer/len
    iicx->iic_address = address & 0xfe; // clear bit 0 for write operation
    iicx->tx_buffer_ptr = buffer;
    iicx->rx_buffer_ptr = NULL; // ensure that nothing will be received
    // option to skip stop-condition generation after successful write
    iicx->transfer_state.WRITE_WITHOUT_STOP = transfer == IIC_Write_WithoutStop ? 1 : 0;
  } else {
    iicx->iic_semaphore = 0; // release semaphore for easier programming at user level
    return (iicx->last_transfer_error=MIOS32_IIC_ERROR_UNSUPPORTED_TRANSFER_TYPE);
  }

  // start with ACK
  I2C_AcknowledgeConfig(iicx->base, ENABLE);

  // clear last error status
  iicx->last_transfer_error = 0;

  // notify that transfer has started
  iicx->transfer_state.BUSY = 1;

  // send start condition
  I2C_GenerateSTART(iicx->base, ENABLE);

  // enable I2V2 event, buffer and error interrupt
  // this must be done *after* GenerateStart, for the case last transfer was WRITE_WITHOUT_STOP.
  // in this case, start was already generated at the end of the last communication!
  I2C_ITConfig(iicx->base, I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR, ENABLE);

  return 0; // no error
}
